--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
         listen 80;
 
         location ^~ /static/ {
-            root /www/ryanlcr_com/static;
+            root /www/ryanlcr_com;
             if ($query_string) {
                 expires max;
             }
